Feel free to use

--- a/sisuUFMG.ipynb
+++ b/sisuUFMG.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1YxXlxYqy0qyXOMUvKQOx-VcFDd6-4Rq3",
-      "authorship_tag": "ABX9TyNfc14bC6W4Vf5H+dRh9Sqp",
+      "authorship_tag": "ABX9TyOy/8p6nD+wjecgnNKl+efo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,7 +186,7 @@
         "id": "ctOzVcaEpMMt"
       },
       "source": [
-        "def DataF(i=0):\n",
+        "def DataF(i=0):  # return the dataframe for one page\n",
         "  t = table(i)\n",
         "  return pd.DataFrame(t)"
       ],
@@ -416,7 +416,7 @@
         "def topV(i=1, plot=False,):\n",
         "  modalidades = list(DF['Modalidade'].unique())\n",
         "  condition =  DF['Modalidade'] == modalidades[i-1]\n",
-        "  ex1 = DF.loc[condition].sort_values(by='Máximo', ascending=False)  # get 5 greatest\n",
+        "  ex1 = DF.loc[condition].sort_values(by='Máximo', ascending=False) \n",
         "  turno = list(ex1['Turno'].values)\n",
         "  nome = list(ex1['Nome'].values)\n",
         "  mamamia = []\n",
@@ -428,7 +428,7 @@
         "  ex1['Nome'] = mamamia\n",
         "  res = ex1.iloc[:5]\n",
         "  return res.iloc[:,[0,2,4]]\n",
-        "topV(8)"
+        "topV(8) # vai da modalidade 1 até 9, 1 se nada for passado"
       ],
       "execution_count": 52,
       "outputs": [
@@ -534,7 +534,7 @@
         "  plt.ylabel('Cursos')\n",
         "\n",
         "  plt.show()\n",
-        "pltex2(8)"
+        "pltex2(8) # vai da modalidade 1 até 9, 1 se nada for passado"
       ],
       "execution_count": 141,
       "outputs": [
@@ -579,7 +579,7 @@
         "  ex1['Nome'] = mamamia\n",
         "  res = ex1.iloc[:5]\n",
         "  return res.iloc[:,[0,2,3]]\n",
-        "ntopV(8)"
+        "ntopV(8) # vai da modalidade 1 até 9, 1 se nada for passado"
       ],
       "execution_count": 83,
       "outputs": [
@@ -669,7 +669,7 @@
           "height": 610
         },
         "id": "d1D2sORl55Al",
-        "outputId": "548a7d3c-ec29-45e5-a856-9167479022da"
+        "outputId": "7c2ec14c-8dfb-49f7-dd73-5c17f5f42589"
       },
       "source": [
         "def pltex3(i=1):\n",
@@ -685,9 +685,9 @@
         "  plt.xlabel('Notas')\n",
         "\n",
         "  plt.show()\n",
-        "pltex3(8)"
+        "pltex3(8) # vai da modalidade 1 até 9. 1 se nada for passado"
       ],
-      "execution_count": 144,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "display_data",
